--- a/Angular/src/index.html
+++ b/Angular/src/index.html
@@ -10,6 +10,10 @@
 </head>
 <base href="/">
 <body>
-  <my-app>Loading ...</my-app>
+  <div class="container">
+    <div class="row main">
+      <my-app>Loading ...</my-app>
+    </div>
+  </div>
 </body>
 </html>
